<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quick Heart Rate Monitor</string>
    <string name="heart_rate_measurement">Heart Rate Measurement</string>
    <string name="view_result">View Result</string>
    <string name="measuring">Measuring...</string>
    <string name="start_measure">Start Measuring</string>
    <string name="action_settings">Settings</string>
    <string name="join">Join</string>
    <string name="login">Log In</string>
    <string name="no_data">No Data</string>
    <string name="forgotpwd"><u>Forgot Password?</u></string>
    <string name="continue1">Continue</string>
    <string name="email">Email</string>
    <string name="pwd">Password</string>
    <string name="textView_name">Name</string>
    <string name="textView_gender">Gender</string>
    <string name="textView_birthday">Birthday</string>
    <string name="textView_height">Height</string>
    <string name="textView_weight">Weight</string>
    <string name="textView_about">About you</string>
    <string name="textView_logged_data">Logged Heart Rate</string>
    
    
    <string-array name="spinner_height">
        <item>feet</item>
        <item>cm</item>
    </string-array>
    
    <string-array name="spinner_weight">
        <item>lbs</item>
        <item>kg</item>
    </string-array>

</resources>
