<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/gradient_dark_pink" >  

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/textView_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/textView_about"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:background="@color/transparent_background">

        <TextView 
            android:id="@+id/textView_name"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/textView_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName|textCapWords" />
        
      </LinearLayout>
      
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:background="@color/transparent_background"
        android:layout_marginTop="1dp">

        <TextView
            android:id="@+id/textView_gender"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/textView_gender"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <EditText
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />
        
      </LinearLayout>
      
      
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_marginTop="1dp"
        android:background="@color/transparent_background">

        <TextView
            android:id="@+id/textView_birthday"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/textView_birthday"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/birthday"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="date" 
            android:focusable="false"/>
     
      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:background="@color/transparent_background"
        android:layout_marginTop="1dp">

        <TextView
            android:id="@+id/textView_height"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/textView_height"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        
        <EditText
            android:id="@+id/height"
			android:layout_weight="1"
			android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:ems="10"
            android:inputType="numberDecimal" />

        <Spinner
            android:id="@+id/spinner_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/spinner_height" />
        
      </LinearLayout>
      
      
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:background="@color/transparent_background"
        android:layout_marginTop="1dp">

        <TextView
            android:id="@+id/textView_weight"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/textView_weight"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        
        <EditText
            android:id="@+id/weight"
			android:layout_weight="1"
			android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:ems="10"
            android:inputType="numberDecimal" />
        
        <Spinner
            android:id="@+id/spinner_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/spinner_weight" />
        
      </LinearLayout>

        
        <Button
            android:id="@+id/continue1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continue1" 
            android:background="@color/transparent_background"
            android:layout_marginTop="10dp"/>


    </LinearLayout>

</RelativeLayout>

